# PartermaiCLI

./: .dockerfile  .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yaml  package-lock.json  package.json
.github/workflows/: rust.yml
docs/: index.html  installer.sh  script.js  styles.css
docs/css/: style.css
src/: edit.rs  editorMode.mjs  main.js  main.rs  shellMode.mjs
